--- a/amazon.html
+++ b/amazon.html
@@ -43,7 +43,7 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png" />
-          <div class="cart-quantity">3</div>
+          <div class="cart-quantity cartToQuantity">0</div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
