create HTML for order-summary

--- a/amazon.html
+++ b/amazon.html
@@ -55,5 +55,5 @@
   </body>
   <script src="data/cart.js"></script>
   <script src="data/products.js"></script>
-  <script src="data/amazon.js"></script>
+  <script src="script/amazon.js"></script>
 </html>
