delete product from HTML

--- a/amazon.html
+++ b/amazon.html
@@ -53,7 +53,5 @@
       <div class="products-grid productContent"></div>
     </div>
   </body>
-  <script src="data/cart.js"></script>
-  <script src="data/products.js"></script>
-  <script src="script/amazon.js"></script>
+  <script type="module" src="script/amazon.js"></script>
 </html>
