--- a/checkout.html
+++ b/checkout.html
@@ -75,7 +75,5 @@
       </div>
     </div>
   </body>
-  <script src="data/cart.js"></script>
-  <script src="data/products.js"></script>
-  <script src="script/checkout.js"></script>
+  <script type="module" src="script/checkout.js"></script>
 </html>
